--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,5 +1,6 @@
 .about-section {
-  padding-top: 10rem;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
   background: linear-gradient(to bottom, $black 0%,#{fade-out($black, .1)} 75%,#{fade-out($black, .2)} 100%);
   p {
     margin-bottom: 5rem;
