--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -4,13 +4,14 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(
-      to bottom,
-      #{fade-out($black, 0.7)} 0%,
-      #{fade-out($black, 0.3)} 75%,
-      $black 100%
-    ),
-    url('../images/bg-masthead.jpg');
+  background: 
+  // linear-gradient(
+  //     to bottom,
+  //     #{fade-out($black, 0.7)} 0%,
+  //     #{fade-out($black, 0.3)} 75%,
+  //     $black 100%
+  //   ),
+    url('../images/pinkphoto.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -20,7 +21,8 @@
     font-size: 2.5rem;
     line-height: 2.5rem;
     letter-spacing: 0.8rem;
-    background: -webkit-linear-gradient(
+    background: 
+    -webkit-linear-gradient(
       fade-out(white, 0.1),
       fade-out(white, 1)
     );
