--- a/src/assets/sass/_signup.scss
+++ b/src/assets/sass/_signup.scss
@@ -1,12 +1,14 @@
 .signup-section {
-  padding: 10rem 0;
-  background: linear-gradient(
+  padding: 6rem 0;
+  padding-bottom: 0rem;
+  background: 
+  linear-gradient(
       to bottom,
       #{fade-out($black, 0.9)} 0%,
       #{fade-out($black, 0.5)} 75%,
       $black 100%
     ),
-    url('../images/bg-signup.jpg');
+    url('../images/pinkphoto.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
