--- a/src/assets/sass/_signup.scss
+++ b/src/assets/sass/_signup.scss
@@ -13,6 +13,19 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  h1 {
+    font-family: 'Varela Round';
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    letter-spacing: 0.8rem;
+    // background: 
+    // -webkit-linear-gradient(
+    //   fade-out(white, 0.1),
+    //   fade-out(white, 1)
+    // );
+    -webkit-text-fill-color: white;
+    -webkit-background-clip: text;
+  }
   .form-inline {
     input {
       box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
