--- a/src/assets/sass/_projects.scss
+++ b/src/assets/sass/_projects.scss
@@ -1,5 +1,6 @@
 .projects-section {
   padding: 10rem 0;
+  padding-bottom: 5rem;
   .featured-text {
     padding: 2rem;
     @media (min-width: 992px) {
