--- a/src/assets/sass/_contact.scss
+++ b/src/assets/sass/_contact.scss
@@ -15,22 +15,22 @@
       width: 3rem;
     }
   }
-  .social {
-    margin-top: 5rem;
-    a {
-      text-align: center;
-      height: 3rem;
-      width: 3rem;
-      background: fade-out($white, 0.9);
-      border-radius: 100%;
-      line-height: 3rem;
-      color: fade-out($white, 0.7);
-      &:hover {
-        color: fade-out($white, 0.5);
-      }
-      &:active {
-        color: $white;
-      }
-    }
-  }
+  // .social {
+  //   margin-top: 5rem;
+  //   a {
+  //     text-align: center;
+  //     height: 3rem;
+  //     width: 3rem;
+  //     background: fade-out($white, 0.9);
+  //     border-radius: 100%;
+  //     line-height: 3rem;
+  //     color: fade-out($white, 0.7);
+  //     &:hover {
+  //       color: fade-out($white, 0.5);
+  //     }
+  //     &:active {
+  //       color: $white;
+  //     }
+  //   }
+  // }
 }
